--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <div class="global-container2">
     <div class="header-container2">
       <div class="header-content2">
-        <h1>World Fitness | Gimnasio en Cali</h1>
+        <h1>Hit GYM | Gimnasio en Cali</h1>
       </div>
       <div class="buttons-container2">
         <button class="btn1" onclick="openInNewTab('https://www.google.com/maps/dir//Hit+Gym,+Navarro,+Cali,+Valle+del+Cauca/@3.396138,-76.5102329,17.79z/data=!4m9!4m8!1m0!1m5!1m1!1s0x8e30a11590105875:0xa9f765cc581b1325!2m2!1d-76.5103348!2d3.3961265!3e0?entry=ttu&g_ep=EgoyMDI1MDMxNy4wIKXMDSoASAFQAw%3D%3D')"><i class='bx bx-map bx-tada' ></i> Como Llegar <i class='bx bx-map bx-tada' ></i></button>
