--- a/index.html
+++ b/index.html
@@ -348,6 +348,17 @@
           panorama: `${baseUrl}5.jpg`,
           thumbnail: `${baseUrl}5.jpg`,
           name: 'Segundo Piso HitGym',
+          markers: [
+    {
+      id: 'marker-image-nodo2',
+      imageLayer: '../mancuerna.png',  // Ruta a tu imagen (puede ser relativa)
+      position: { yaw: 1.5, pitch: 0 },  // Ajusta los valores según donde lo quieras posicionar
+      size: { width: 602, height: 522 },     // Tamaño del marker
+      // anchor y rotation se pueden agregar si es necesario, por ejemplo:
+      // anchor: { x: 0.5, y: 0.5 },
+      // rotation: 45
+    }
+  ],
           caption: 'Segundo Piso a HitGym',
           links: [
   { nodeId: 'nodo4', position: {yaw: 3.2962262391603594, pitch: -0.23490423897050405} },
