--- a/index.html
+++ b/index.html
@@ -583,7 +583,11 @@
         [
           VisibleRangePlugin,
           {}
-        ]
+        ],
+        [AutorotatePlugin, {
+            autorotatePitch: '5deg',
+        }],
+
       ]
     });
   
